syntax = "proto3";

package greeter;

import "google/protobuf/empty.proto";

service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  rpc ListNames(google.protobuf.Empty) returns (NameList) {}
  rpc StreamListNames(google.protobuf.Empty) returns (stream Name) {}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}

message NameList {
  repeated string names = 1;
}

message Name {
  string name = 1;
}